- Reinstate user-level choice of "Windows-look" emulation
- Reinstate user choice of menu font on Windows
- Script editor: add right-click popup with menu items to
  comment/uncomment selected block of commands
- genr: fix for case where closing parenthesis is missing at 
  the end of a formula
- OS X: replace fftw library with an i386 build
- Toolbar: use GTK stock icons where possible

11/27/2007 version 1.7.0
- Add heckit estimator
- Add estimation/testing for restricted VECM models
- Fix for loop on empty list
- Fix for remaining issues with apostrophes in graph titles
- Fix for lists as arguments for user-defined functions
- Fix for saved sessions after using Forecast menu items
- Fix for long variable names in Model Graph menus
- Improve formatting for nonparametric difference test
- Improve formatting for "freq" command; also add --silent
  option for this command
- Add ceil() and floor() functions in genr
- Add "--p-values" option to show p-values instead of slopes
  for logit, probit models
- Add options to GUI for xtab command (cross-tabulation);
  also add Fisher's Exact Test for 2 x 2 tables
- Fix for graphing the time trend, and for graphs displaying
  more than 8 series
- Fix for length of correlogram on weekly data
- Fix for null matrix arguments to user functions in GUI
- Fix for floating point values in "set" when using 
  decimal comma
- Fix for opening cross-sectional gretl data sets in R version 
  2.5.0 or higher
- Fixes for autoregressive genr formula: speed-up, and fix bug
  when such formulae are used in an nls/mle block
- Double maximum length to gretl command line to 8192 bytes
- Gamma p-values: switch to shape/scale parameterization
- Spearman's rho: fix for case with ties
- Allow for syntax change re. missing values in gnuplot 4.3
- "corr" command: add --spearman and --kendall options
- Rank correlation in GUI: add Kendall's tau option
- Fix a few issues with extreme values in cdf, pvalue code