@@ -113,7 +113,7 @@ PDF-oriented, so it's nice to be able to provide PDF graph support,
 which I don't think is in a stock Fink gnuplot build.  Finally, the
 gnuplot source referenced below is patched so as to provide accurate
 bounding box information for PNG files; this improves the quality of
-mouse-over interation with graphs under gretl.
+mouse-over interaction with graphs under gretl.
 
 Grab the patched source for gnuplot 4.2.2,
 \url{http://ricardo.ecn.wfu.edu/~cottrell/gretl-osx/gnuplot-4.2.2-ac.tar.gz}.
